--- a/test2.html
+++ b/test2.html
@@ -11,8 +11,16 @@
     </head>
 
     <body>
+
+        <div id="top"></div>
+        <img src="img/IMG_3658.JPG" alt="EWA FLORYSTKA" width="100%">
         <h1>Kwiaty, badyle i takie tam ...</h1>
         <p>Hej dekoracje uroczystości - to nasza specjalność!</p>
+
+        <a href="contact.html">KONTAKT</a>
+        <a href="prices/ceny-dekoracji.html">CENNIK</a>
+        <a href="http://www.wp.pl" target="_blank">a teraz poczytaj wiadomości</a>
+        <a href="downloads/wiata2.pdf">Pobierz sobie rysunek</a>
 
         <h2>Jakie uroczystości obsługujemy?</h2>
         <p>Dekorujemy wszystko co popadnie- to <small>nasza</small> specjalność!</p>
@@ -32,10 +40,8 @@
         <h2>KONTAKT</h2>
         <h4>telefon</h4>
         <p>(58) 555 222 667</p>
-
         <h4>e-mail</h4>
         <p>125963@gmail.com</p>
-
         <h4>Posłaniec</h4>
         <p>Trzecia droga za sołtysem i ścieżką przez bagna</p>
 
@@ -49,6 +55,7 @@
       <p>&copy;2021 - K. Szukalski</p>
     </footer>
 
+        <a href="#top">Powrót do góry strony</a>
     </body>
 
 
